--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "scripts": {
     "build": "nx build",
-    "test": "nx test",
     "format": "nx format",
     "format:check": "nx format:check",
     "lint": "nx lint",
@@ -29,7 +28,6 @@
     "@nx/eslint": "17.1.2",
     "@nx/eslint-plugin": "17.1.2",
     "@nx/js": "^17.2.0",
-    "@nx/vite": "17.1.2",
     "@nx/workspace": "17.1.2",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
@@ -38,16 +36,11 @@
     "@types/tar": "4.0.3",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
-    "@vitest/coverage-v8": "~0.32.0",
-    "@vitest/ui": "~0.32.0",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "nx": "^17.1.2",
     "prettier": "^2.6.2",
-    "typescript": "~5.3.3",
-    "verdaccio": "^5.27.0",
-    "vite": "~4.3.9",
-    "vitest": "~0.32.0"
+    "typescript": "~5.3.3"
   },
   "publishConfig": {
     "access": "public",
