--- a/.github/workflows/app.js.yml
+++ b/.github/workflows/app.js.yml
@@ -25,6 +25,9 @@ jobs:
         working-directory: ./apps/build-onchain-apps
         # When fails, please run "npm run lint" to your code
         run: npm run lint
+      - name: Add Stylelint
+        working-directory: ./apps/build-onchain-apps
+        run: npm run stylelint
       - name: App Test Check
         working-directory: ./apps/build-onchain-apps
         # When fails, please check your tests
