--- a/apps/build-onchain-apps/.stylelintrc.json
+++ b/apps/build-onchain-apps/.stylelintrc.json
@@ -1,5 +1,8 @@
 { 
-  "extends": ["stylelint-config-standard"],
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-config-idiomatic-order"
+  ],
   "rules": {
     "at-rule-no-unknown": [true, {
       "ignoreAtRules": ["tailwind"]
