--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint --fix",
     "lint:check": "next lint",
     "start": "next start",
+    "stylelint": "stylelint '**/*.css'",
     "test": "jest .",
     "test:coverage": "jest . --coverage",
     "test:coverage:open": "yarn test:coverage && open coverage/lcov-report/index.html"
@@ -81,6 +82,7 @@
     "postcss": "^8.4.32",
     "prettier": "3.0.3",
     "stylelint": "^16.0.2",
+    "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-standard": "^35.0.0",
     "stylelint-order": "^6.0.4",
     "tailwindcss": "^3.3.6",
