--- a/apps/build-onchain-apps/.stylelintrc.json
+++ b/apps/build-onchain-apps/.stylelintrc.json
@@ -3,6 +3,9 @@
     "stylelint-config-standard",
     "stylelint-config-idiomatic-order"
   ],
+  "ignoreFiles": [
+    "coverage/**/*.css"
+  ],
   "rules": {
     "at-rule-no-unknown": [true, {
       "ignoreAtRules": ["tailwind"]
