--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -82,6 +82,7 @@
     "jest-extended": "^4.0.2",
     "postcss": "^8.4.32",
     "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "stylelint": "^16.0.2",
     "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-standard": "^35.0.0",
