--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "check": "yarn format && yarn lint && yarn test && yarn test:coverage",
+    "check": "yarn format && yarn lint && yarn stylelint && yarn test && yarn test:coverage",
     "dev": "next dev",
     "format": "prettier --log-level warn --write .",
     "format:check": "prettier --check .",
     "lint": "next lint --fix",
     "lint:check": "next lint",
     "start": "next start",
-    "stylelint": "stylelint '**/*.css'",
+    "stylelint": "stylelint '**/*.css' --fix",
+    "stylelint:check": "stylelint '**/*.css'",
     "test": "jest .",
     "test:coverage": "jest . --coverage",
     "test:coverage:open": "yarn test:coverage && open coverage/lcov-report/index.html"
@@ -82,6 +83,7 @@
     "jest-extended": "^4.0.2",
     "postcss": "^8.4.32",
     "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "stylelint": "^16.0.2",
     "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-standard": "^35.0.0",
