--- a/apps/build-onchain-apps/.env.local.default
+++ b/apps/build-onchain-apps/.env.local.default
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=TEST_1234567890
 ENVIRONMENT=localhost
+SIGNATURE_MINT_SIGNER=0xCreateAWalletAndDeployContract
