--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -28,9 +28,12 @@
     "react": "^18",
     "react-dom": "^18",
     "react-remove-scroll": "^2.5.7",
-    "scroll-into-view-if-needed": "^3.1.0",
+    "rehype-pretty-code": "0.12.3",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.0.0",
     "shikiji": "^0.9.17",
-    "shikiji-core": "^0.9.17",
+    "unified": "^11.0.4",
     "viem": "1.19.15",
     "wagmi": "1.4.12",
     "workbox-webpack-plugin": "^7.0.0"
@@ -47,8 +50,8 @@
     "@types/jest": "^29.5.10",
     "@types/minipass": "^3.3.5",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@typescript-eslint/type-utils": "^5.54.1",
@@ -87,7 +90,7 @@
     "stylelint-order": "^6.0.4",
     "tailwindcss": "^3.4.0",
     "ts-jest": "^29.1.1",
-    "typescript": "~5.3.3"
+    "typescript": "^5.3.3"
   },
   "packageManager": "yarn@4.0.2"
 }
