--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -22,6 +22,7 @@
     "@coinbase/wallet-sdk": "^3.7.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@rainbow-me/rainbowkit": "1.3.1",
+    "clsx": "^2.1.0",
     "next": "13.5.6",
     "next-pwa": "5.6.0",
     "perfume.js": "9.2.0",
