--- a/.github/workflows/app.js.yml
+++ b/.github/workflows/app.js.yml
@@ -28,6 +28,9 @@ jobs:
       - name: App Stylelint
         working-directory: ./apps/build-onchain-apps
         run: npm run stylelint
+      - name: App Format Check
+        working-directory: ./apps/build-onchain-apps
+        run: npm run format:check
       - name: App Test Check
         working-directory: ./apps/build-onchain-apps
         # When fails, please check your tests
