--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -21,6 +21,7 @@
     "@coinbase/onchainkit": "^0.1.0",
     "@coinbase/wallet-sdk": "^3.7.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@rainbow-me/rainbowkit": "1.3.1",
     "abitype": "^0.10.3",
     "clsx": "^2.1.0",
