--- a/apps/build-onchain-apps/contracts/foundry.toml
+++ b/apps/build-onchain-apps/contracts/foundry.toml
@@ -3,6 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 fs_permissions = [{ access = "read", path = "./"}]
+solc="0.8.20"
 
 [rpc_endpoints]
 "${NETWORK}"="${RPC_URl}"
