--- a/apps/build-onchain-apps/contracts/.env.example
+++ b/apps/build-onchain-apps/contracts/.env.example
@@ -2,3 +2,4 @@ PRIVATE_KEY=
 RPC_URL="https://sepolia.base.org"
 NETWORK="base_sepolia"
 SIGNATURE_MINT_SIGNER=
+BLOCK_EXPLORER_API_KEY="3SAQSB2DE6Q27DEJVPRPH7XPSJPW69BIJT"
