--- a/apps/build-onchain-apps/.stylelintrc.json
+++ b/apps/build-onchain-apps/.stylelintrc.json
@@ -7,6 +7,7 @@
     "coverage/**/*.css"
   ],
   "rules": {
+    "alpha-value-notation": "number",
     "at-rule-no-unknown": [true, {
       "ignoreAtRules": ["tailwind"]
     }],
