--- a/.github/workflows/foundry.yml
+++ b/.github/workflows/foundry.yml
@@ -24,12 +24,14 @@ jobs:
           version: nightly
 
       - name: Run Forge build
+        working-directory: ./template/contracts
         run: |
           forge --version
           forge build --sizes
         id: build
 
       - name: Run Forge tests
+        working-directory: ./template/contracts
         run: |
           forge test -vvv
         id: test
