--- a/template/package.json
+++ b/template/package.json
@@ -34,9 +34,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-remove-scroll": "^2.5.7",
+    "rehype-pretty-code": "0.12.3",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.0.0",
     "scroll-into-view-if-needed": "^3.1.0",
     "shikiji": "^0.9.17",
     "shikiji-core": "^0.9.17",
+    "unified": "^11.0.4",
     "viem": "1.21.4",
     "wagmi": "1.4.13",
     "workbox-webpack-plugin": "^7.0.0"
