--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -31,7 +31,7 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules",
-    "./contracts"
+    "contracts",
+    "node_modules"
   ]
 }
