fix: typo in foundry.toml

--- a/template/contracts/foundry.toml
+++ b/template/contracts/foundry.toml
@@ -6,7 +6,7 @@ fs_permissions = [{ access = "read", path = "./"}]
 solc="0.8.23"
 
 [rpc_endpoints]
-"${NETWORK}"="${RPC_URl}"
+"${NETWORK}"="${RPC_URL}"
 
 [etherscan]
 "${NETWORK}"={key="${BLOCK_EXPLORER_API_KEY}"}
