--- a/template/contracts/foundry.toml
+++ b/template/contracts/foundry.toml
@@ -9,6 +9,6 @@ solc="0.8.23"
 "${NETWORK}"="${RPC_URL}"
 
 [etherscan]
-"${NETWORK}"={key="${BLOCK_EXPLORER_API_KEY}"}
+"${NETWORK}"={key="${BLOCK_EXPLORER_API_KEY}",url="${BLOCK_EXPLORER}"}
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
