--- a/template/package.json
+++ b/template/package.json
@@ -20,11 +20,13 @@
   "dependencies": {
     "@coinbase/onchainkit": "0.1.2",
     "@coinbase/wallet-sdk": "^3.9.1",
+    "@farcaster/hub-nodejs": "^0.10.21",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@rainbow-me/rainbowkit": "1.3.3",
     "abitype": "^0.10.3",
+    "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "next": "13.5.6",
     "next-pwa": "5.6.0",
