--- a/template/package.json
+++ b/template/package.json
@@ -18,9 +18,8 @@
     "test:coverage:open": "yarn test:coverage && open coverage/lcov-report/index.html"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "0.1.3",
-    "@coinbase/wallet-sdk": "^3.9.1",
-    "@farcaster/hub-nodejs": "^0.10.21",
+    "@coinbase/onchainkit": "0.1.4",
+    "@coinbase/wallet-sdk": "3.9.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
