--- a/template/package.json
+++ b/template/package.json
@@ -27,6 +27,7 @@
     "@rainbow-me/rainbowkit": "1.3.3",
     "abitype": "^0.10.3",
     "clsx": "^2.1.0",
+    "net": "^1.0.2",
     "next": "13.5.6",
     "next-pwa": "5.6.0",
     "perfume.js": "9.2.0",
